--- a/src/main/resources/templates/MainPage.html
+++ b/src/main/resources/templates/MainPage.html
@@ -206,7 +206,8 @@
                 <i class="fas fa-sign-out-alt"></i> Logout
             </a>
             <div class="user-profile">
-                <div class="user-avatar" th:text="${session.loggedInUser.name.substring(0,1).toUpperCase()}">U</div>
+                <img th:if="${session.loggedInUser.profileImagePath}" th:src="${session.loggedInUser.profileImagePath}" class="user-avatar" style="object-fit: cover;">
+                <div th:unless="${session.loggedInUser.profileImagePath}" class="user-avatar" th:text="${session.loggedInUser.name.substring(0,1).toUpperCase()}">U</div>
                 <div class="user-details">
                     <span class="user-name" th:text="${session.loggedInUser.name}">User Name</span>
                 </div>
